<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/nature">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationfinder"
        android:textSize="32sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:shadowColor="#80000000"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:background="@drawable/oval_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/add_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/delete_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <Button
            android:id="@+id/update_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>
    </LinearLayout>

    <View
        android:id="@+id/white_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/search1"
        android:padding="10dp"
        android:background="@drawable/search_bar_background"
        android:inputType="text"
        app:layout_constraintTop_toTopOf="@id/white_box"
        app:layout_constraintStart_toStartOf="@id/white_box"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address1"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/search_bar"
        app:layout_constraintStart_toStartOf="@id/search_bar"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/address_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a1"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/address_label"
        app:layout_constraintStart_toEndOf="@id/address_label"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/latitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude1"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/address_label"
        app:layout_constraintStart_toStartOf="@id/address_label"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a2"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/latitude_label"
        app:layout_constraintStart_toEndOf="@id/latitude_label"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/longitude_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/latitude_label"
        app:layout_constraintStart_toStartOf="@id/latitude_label"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_a3"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintTop_toTopOf="@id/longitude_label"
        app:layout_constraintStart_toEndOf="@id/longitude_label"
        android:layout_marginStart="8dp"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search3"
        app:layout_constraintTop_toBottomOf="@id/longitude_value"
        app:layout_constraintStart_toStartOf="@id/white_box"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
